ensure json wraps and doesn't overflow

--- a/styles/blocks.scss
+++ b/styles/blocks.scss
@@ -143,6 +143,7 @@
 
 .json-view {
 	line-height: 1.4;
+	word-break: break-word;
 }
 
 .loading-blocks {
